2005-02-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/: Removed sources that are duplicated 
	in adddel, and just include them from there. We can not using the 
	custom popup cellrenderer anyway when we start using gtkmm 2.6.

2005-02-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/adddel/: No longer uses Fields and Gda::Values
	at all.
	* glom/utility_widgets/db_addel/: A version of AddDel that deals with 
	Fields and their Gda::Values, and nothing else.
	* glom/mode_data/box_data_list.[h|cc]: Use DbAddDel instead of AddDel, 
	which deals with Values directly.
	* glom/data_structure/glomconversions.cc: parse_data() Prevent 
	0 days and months, to avoid postgres errors.

0.8.11:

2005-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list.cc, box_data_details.cc: 
	init_db_details(): Get shared connection earlier and keep it longer, 
	so that we make fewer individual connections when getting data from 
	the database. This make things faster.

2005-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/addedel/adddel.cc: get_column_field(): Return 
	the id, which is the field name, not the name, which is the field 
	title. This allows data entry in the list view when field titles 
	are not equal to the names.

2005-02-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/connectionpool.cc: Actually use the host details, so people 
	can connect to postgres servers that are not on the local host.

2005-02-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/connection_pool.cc: connect(): Specify the template1 default 
	database when we do not want to specify a database, because that seems 
	to fail with newer versions of postgres, or on some systems, though 
	I am not sure where it works and where it does not. Hopefully this 
	template1 name is used on all distros.

2005-01-05  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Add intltool-extract.in, intltool-merge.in, 