@@ -16,8 +16,7 @@ libmode_data_a_SOURCES = box_data.cc box_data.h \
                          dialog_layout_details.cc dialog_layout_details.h \
                          dialog_choose_field.cc dialog_choose_field.h \
                          dialog_choose_relationship.cc dialog_choose_relationship.h \
-                         treestore_layout.cc treestore_layout.h \
-                         glom_db_treemodel.h glom_db_treemodel.cc
+                         treestore_layout.cc treestore_layout.h
                          
                          
                          
