@@ -4,5 +4,6 @@ INCLUDES = -I@top_srcdir@/ $(GLOM_CFLAGS)
 
 noinst_LIBRARIES = libutility_widgets_db_adddel.a
 libutility_widgets_db_adddel_a_SOURCES = db_adddel.cc db_adddel.h db_adddel_withbuttons.cc db_adddel_withbuttons.h \
-                                      db_treeviewcolumn_glom.cc db_treeviewcolumn_glom.h
+                                      db_treeviewcolumn_glom.cc db_treeviewcolumn_glom.h \
+                                      glom_db_treemodel.h glom_db_treemodel.cc
  
